# Janus

./: CMakeLists.txt  DOCS  README.md
Beta/: B.0.1 DOCS  circuit_synthesiser.cpp
Beta/src/: ast.hpp  backend_qiskit.cpp  backend_qiskit.hpp  backend_quest.cpp  backend_quest.hpp  circuit_synthesiser.hpp  error.cpp  error.hpp  gate_library.hpp  ir.hpp  ir_gen.cpp  ir_gen.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  quantum_state.cpp  quantum_state.hpp  scope.cpp  scope.hpp  token.hpp  typechecker.cpp  typechecker.hpp  types.hpp  value.cpp  value.hpp
Beta_Testing/: Known_Bugs  Known_Bugs_&_limitations
Beta_Testing/B.0.0/: Speed_Benchmark_1  latency_common_gates_1_qubit
Beta_Testing/B.0.1/: Patch_1_Plans
